# auth-rs

./: .env.example  Cargo.toml  Dockerfile  Makefile  Procfile  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 20251123142943_create_users.down.sql  20251123142943_create_users.up.sql  20251123201706_create_user_credentials.down.sql  20251123201706_create_user_credentials.up.sql  20251129202046_create_user_sessions.up.sql  20251213221542_add_disabled_at_to_user_passwords.down.sql  20251213221542_add_disabled_at_to_user_passwords.up.sql
src/: app.rs  config.rs  di.rs  errors.rs  main.rs  providers.rs
src/adapters/: postgres.rs
src/app/: commands.rs  queries.rs
src/app/commands/: authenticate_user.rs  change_password.rs  delete_user.rs  refresh_session.rs  register_user.rs
src/app/queries/: find_user.rs
src/providers/: argon2_hasher.rs  argon2_verifier.rs  jwt_decoder.rs  jwt_encoder.rs  refresh_token_generator.rs
