[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = [
  "derive",
  "postgres",
  "runtime-tokio-native-tls",
  "uuid",
] }
tokio = { version = "1.48.0", features = ["full"] }
